[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tirmite"
authors = [
    {name = "Adam Taranto", email = "adam.p.taranto@gmail.com"},
]

description = "Annotation of cryptic MITEs and DNA-Transposons using Terminal Inverted Repeat HMMs."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["Transposon", "TIR", "MITE", "TE"]
license = {text = "MIT"}

classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    ]

dynamic = ["version","dependencies"]

[tool.setuptools.dynamic]
version = {attr = "tirmite.__version__"}
dependencies = {file = "requirements.txt"}

[project.urls]
homepage = "https://github.com/adamtaranto/tirmite"
documentation = "https://github.com/adamtaranto/tirmite"
repository = "https://github.com/adamtaranto/tirmite"

[project.scripts]
#my-script = "package.module:function"
tirmite = "tirmite.cmd_tirmite:main"
tsplit-TIR = "tirmite.cmd_TIR:main"

# ... other project metadata fields as specified in:
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
# https://github.com/TezRomacH/python-package-template/blob/master/pyproject.toml
# https://martin-thoma.com/pyproject-toml/
# https://godatadriven.com/blog/a-practical-guide-to-setuptools-and-pyproject-toml/ # Great guide!
# https://packaging-guide.openastronomy.org/en/latest/minimal.html
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://towardsdatascience.com/setuptools-python-571e7d5500f2#:~:text=be%20more%20appropriate.-,The%20setup.,as%20the%20command%20line%20interface.
# https://python-poetry.org/docs/pyproject/
