[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "tirmite"
description = "Map profile HMMs of transposon termini to genomic sequences for annotation of cryptic transposon variants."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Adam Taranto", email = "adam.p.taranto@gmail.com" }]

classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    'biopython>=1.70',
    "pandas>=0.23.4",
    "pyfaidx",
    "pyhmmer",
    "rich",
]

dynamic = ["version"]

# Optional dependencies for testing
[project.optional-dependencies]
dev = [
    "hatch",
    "isort",
    "ipykernel",
    "mypy",
    "pydocstyle",
    "numpydoc-validation",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
]

[project.urls]
homepage = "https://github.com/adamtaranto/TIRmite"
documentation = "https://github.com/adamtaranto/TIRmite"
repository = "https://github.com/adamtaranto/TIRmite"

[project.scripts]
tirmite = "tirmite.cli.cli:main"

[tool.hatch.build]
source = "src"

exclude = ["environment.yml", ".github", ".vscode"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.vcs]
tag-pattern = "v*"         # Git tags starting with 'v' will be used for versioning
fallback-version = "0.0.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/tirmite/_version.py"

[tool.pytest.ini_options]
addopts = "-v --cov=tirmite --cov-branch --cov-report=xml --cov-report=term"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py310"
line-length = 88
fix = true

[tool.ruff.lint]
select = [
    "C", # mccabe rules
    "F", # pyflakes rules
    "E", # pycodestyle error rules
    "W", # pycodestyle warning rules
    "B", # flake8-bugbear rules
    "I", # isort rules
    #"D", # pydocstyle rules
]
ignore = [
    "C901", # max-complexity-10
    "E501", # line-too-long
    "I001", # isort-imports
    "B905", # `zip()` without an explicit `strict=` parameter
]

# Don't auto-fix docstring issues - they're too fragile
unfixable = ["D"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"] # Ignore all pydocstyle rules in tests

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
indent-style = "space"
quote-style = "single"

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["tirmite"]
known-third-party = ["Bio", "pandas", "pyhmmer"]

[tool.isort]
profile = "black"
known_third_party = ["Bio", "pandas", "pyhmmer"]
known_first_party = ["tirmite"]
default_section = "THIRDPARTY"
force_sort_within_sections = true

[tool.numpydoc_validation]
checks = [
    "all",  # report on all checks
    "ES01", # but don't require an extended summary
    "EX01", # or examples
    "SA01", # or a see also section
    "SS06", # and don't require the summary to fit on one line
]
exclude = [ # don't report on checks for these
    '\.__init__$',
    '\.__repr__$',
    '\.__str__$',
]
override_SS05 = [ # allow docstrings to start with these words
    '^Process ',
    '^Assess ',
    '^Access ',
]

# Don't process filepaths that match these regex patterns
exclude_files = [
    '^_version\\.py$',
]

[tool.mypy]
# Type hint strictness settings
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# Disable specific error codes for false positives and external library type issues
# arg-type: Path vs str conversions for functions expecting str in other modules
# attr-defined: Attribute access on objects from external libraries (pandas, pyhmmer)
# union-attr: Pandas DataFrame operations that mypy can't fully type check
# index: Indexing operations on Union types from pandas
disable_error_code = ["arg-type", "attr-defined", "union-attr", "index"]

[tool.pydocstyle]
convention = "numpy"
match-dir = "[^\\.].*"     # matches all dirs that don't start with a dot
match = "(?!test_).*\\.py" # matches files that don't start with 'test_' but end with '.py'
